<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                style="@style/support"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/terms_and_conditions" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginStart="6dp"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:layout_weight="1"
                android:text="@string/agree_terms_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginStart="6dp"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:layout_weight="1"
                android:text="@string/agree_terms_question" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/accept_terms_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/agree_terms_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:maxLines="2"
            android:text="@string/agree_terms_answer"
            android:textColor="@color/black" />

    </LinearLayout>

    <Button
        android:id="@+id/accept_btn"
        style="@style/LoginButton"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_margin="20dp"
        android:text="@string/accept"
        android:layout_gravity="bottom" />

    <Button
        android:id="@+id/refuse_btn"
        style="@style/RefuseButton"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/refuse"
        android:layout_gravity="bottom" />

</LinearLayout>