<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp">

        <ImageView
            android:id="@+id/filters_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/delete"
            android:paddingTop="4dp"
            android:src="@drawable/input_delete" />

        <TextView
            style="@style/SelectFilterTextPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/select_a_filter" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingTop="40dp"
        android:paddingEnd="16dp">

        <TextView
            style="@style/SelectFilterTextSecondaryGray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_a_filter" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="16sp">

        <androidx.cardview.widget.CardView
            style="@style/MenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="5dp"
            card_view:cardUseCompatPadding="true">

            <com.company.iotfortechnicians.findmydevice.filter.TextFilterView
                android:id="@+id/device_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/search_type_device_id" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/MenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="5dp"
            card_view:cardUseCompatPadding="true">

            <com.company.iotfortechnicians.findmydevice.filter.TextFilterView
                android:id="@+id/device_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/search_type_device_name" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/MenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="5dp"
            card_view:cardUseCompatPadding="true">

            <com.company.iotfortechnicians.findmydevice.filter.SelectionFilterView
                android:id="@+id/device_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/search_type_device_group" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/MenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="5dp"
            card_view:cardUseCompatPadding="true">

            <com.company.iotfortechnicians.findmydevice.filter.SelectionFilterView
                android:id="@+id/interface_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/search_type_interface_status" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp">

        <Button
            android:id="@+id/button_submit"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_show_results" />
    </LinearLayout>

</LinearLayout>