<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/edit_props_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/input_delete"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/delete" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView2"
            style="@style/PropertiesTitleLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/edit_properties"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/add_new_property"
            style="@style/ButtonSmall"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:text="@string/add_new"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/parent_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/properties_list"
            style="@style/DeviceList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="32dp"
            app:layoutManager="LinearLayoutManager"
            tools:listitem="@layout/property_row_layout" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:background="@color/white"
        android:padding="16dp">

        <Button
            android:id="@+id/save_edit_props_btn"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_btn" />
    </LinearLayout>

</LinearLayout>