<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginTop="16dp"
    tools:context=".deviceinfo.DeviceInfoFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            style="@style/DeviceDataTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>

                <TextView
                    style="@style/DeviceDataTableRowLeftTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_weight="1"
                    android:text="@string/last_date" />

                <TextView
                    android:id="@+id/last_date"
                    style="@style/LightMode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/DeviceDataTableRowLeftTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_weight="1"
                    android:text="@string/network_signal" />

                <ImageView
                    android:id="@+id/network_signal"
                    style="@style/LightMode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/DeviceDataTableRowLeftTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_weight="1"
                    android:text="@string/rssi" />

                <TextView
                    android:id="@+id/rssi"
                    style="@style/LightMode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/DeviceDataTableRowLeftTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_weight="1"
                    android:text="@string/snr" />

                <TextView
                    android:id="@+id/snr"
                    style="@style/LightMode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/DeviceDataTableRowLeftTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_weight="1"
                    android:text="@string/esp" />

                <TextView
                    android:id="@+id/esp"
                    style="@style/LightMode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/DeviceDataTableRowLeftTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_weight="1"
                    android:text="@string/sf" />

                <TextView
                    android:id="@+id/sf"
                    style="@style/LightMode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_weight="1"
                    android:maxLines="10" />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/DeviceDataTableRowLeftTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_weight="1"
                    android:text="@string/gateway_count" />

                <TextView
                    android:id="@+id/gateway_count"
                    style="@style/LightMode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_weight="1" />
            </TableRow>
        </TableLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</FrameLayout>